# santi

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  TASK.md  docker-compose.yml
.github/workflows/: guard.yml
api/: Cargo.toml
api/src/: config.rs  lib.rs  main.rs  openapi.rs  state.rs
api/tests/: README.md
crates/api/: Cargo.toml
crates/redis-lock/: Cargo.toml
crates/santi-api/: Cargo.toml
crates/santi-api/src/: app.rs  bootstrap.rs  bootstrap_local.rs  bootstrap_standalone.rs  chat_client.rs  config.rs  db.rs  lib.rs  link_client.rs  main.rs  openapi.rs  protocol_reply.rs  state.rs  surface.rs  telemetry.rs
crates/santi-api/src/adapter/: turn_store.rs
crates/santi-api/src/chat_client/: mod.rs
crates/santi-api/src/handler/: admin.rs  health.rs  meta.rs  mod.rs  session.rs  session_events.rs  stim.rs
crates/santi-api/src/http/: app.rs  openapi.rs  state.rs
crates/santi-api/src/link_client/: events.rs  mod.rs  request.rs
crates/santi-api/src/model/: mod.rs
crates/santi-api/src/repo/: mod.rs
crates/santi-api/src/runtime/: bootstrap.rs  config.rs  context.rs  tools.rs
crates/santi-api/src/schema/: admin.rs  common.rs  meta.rs  mod.rs  session.rs  soul.rs
crates/santi-api/src/service/: mod.rs  openai_compatible.rs  turn.rs
crates/santi-api/src/service/session/: memory.rs  query.rs  send.rs
crates/santi-api/src/service/session/kernel/: mod.rs  transcript.rs
crates/santi-api/src/surface/: admin.rs  capabilities.rs  error.rs  session.rs  soul.rs
crates/santi-api/tests/: README.md  local_bootstrap.rs  local_http_smoke.rs  local_send.rs  local_session_store.rs  provider_clients.rs  standalone_bootstrap.rs  standalone_http_smoke.rs  standalone_send.rs  standalone_session_store.rs
crates/santi-api/tests/standalone_http_smoke/: common.rs  main_path.rs  meta_soul.rs  provider_admin.rs  session_flows.rs  stim_protocol.rs
crates/santi-cli/: AGENTS.md  Cargo.toml
crates/santi-cli/src/: cli.rs  config.rs  main.rs  output.rs
crates/santi-cli/src/backend/: api.rs  local.rs  mod.rs
crates/santi-core/: Cargo.toml
crates/santi-db/: Cargo.toml
crates/santi-db/src/: lib.rs  message_events.rs
crates/santi-db/src/adapter/: effect_ledger.rs  local_effect_ledger.rs  local_session_fork_compact.rs  local_session_store.rs  local_soul_runtime.rs  local_soul_store.rs  memory_store.rs  mod.rs  session_ledger.rs  session_query.rs  soul.rs  soul_runtime.rs  sqlite_session_ledger.rs  turn_store.rs
crates/santi-db/src/adapter/local/: effect_ledger.rs  mod.rs  session_compact.rs  session_fork.rs  session_fork_compact.rs  session_store.rs  soul_runtime.rs
crates/santi-db/src/adapter/postgres/: session_ledger.rs  soul.rs  soul_runtime.rs
crates/santi-db/src/adapter/postgres/session_ledger/: mapping.rs  mod.rs  mutation.rs
crates/santi-db/src/adapter/postgres/soul_runtime/: compact.rs  fork.rs  helpers.rs  mod.rs  query_port.rs  runtime_port.rs
crates/santi-db/src/adapter/standalone/: effect_ledger.rs  session_compact.rs  session_fork.rs  session_store.rs  soul_runtime.rs  soul_store.rs
crates/santi-db/src/adapter/standalone/session_store/: mapping.rs  message_events.rs  schema.rs
crates/santi-db/src/adapter/standalone/soul_runtime/: bootstrap.rs  compact.rs  fork.rs  helpers.rs  mod.rs  query_port.rs  runtime_port.rs
crates/santi-db/src/db/migrations/: 0001_init.sql  0002_fork_lineage.sql  0003_session_effects.sql
crates/santi-db/src/repo/: message_repo.rs  mod.rs  session_repo.rs  soul_repo.rs
crates/santi-db/tests/: message_events.rs  standalone_soul_runtime.rs
crates/santi-ebus/: Cargo.toml
crates/santi-lock/: Cargo.toml
crates/santi-lock/src/: lib.rs
crates/santi-lock/src/adapter/: mod.rs  redis.rs  standalone.rs
crates/santi-provider/: Cargo.toml
crates/santi-provider/src/: openai_compatible.rs
crates/santi-runtime/: Cargo.toml
crates/santi-runtime/src/: hooks.rs  lib.rs  session.rs
crates/santi-runtime/src/runtime/: context.rs  mod.rs  prompt.rs  tools.rs
crates/santi-runtime/src/runtime/tools/: bash_stream.rs  catalog.rs  dispatch_result.rs  github_https_git_env.rs
crates/santi-runtime/src/session/: compact.rs  effect.rs  fork.rs  hook_runtime.rs  local_send.rs  memory.rs  query.rs  send.rs  standalone_send.rs  watch.rs
crates/santi-runtime/src/session/send/: assembly.rs  mod.rs  turn.rs
crates/santi-runtime/src/session/send/turn/: body.rs
crates/santi-runtime/src/session/watch/: mod.rs  projection.rs  shapes.rs  tests.rs
crates/santi-runtime/tests/: assembly.rs  compact.rs  effect.rs  fork.rs  hooks.rs  prompt.rs  query.rs  tools.rs  watch.rs
docs/: README.md  SoulRuntimePort-no-go-list.md  adapter-compat-layer-baseline.md  architecture-adr.md  canonical-path-consumer-inventory.md  cold-start-verification.md  composition-root.md  crate-architecture.md  crate-refactor-plan.md  design-notes.md  dev-environment.md  dev-faq.md  hook-reload-boundary.md  http-api-contract.md  implementation-worklist.md  layer-responsibility-analogy.md  lifecycle.md  local-adaptor-first-pass.md  local-mode.md  meta-and-error-schema.md  migration-checklist.md  naming-baseline.md  phase-b-implementation-move-baseline.md  port-contract-audit.md  port-contract-layering-draft.md  provider-gateway.md  redis-lock-plan.md  rename-sequencing-checklist.md  rewrite-plan.md  runtime-ports-db-adapters-boundary.md  runtime-primitives.md  service-config-and-bootstrap.md  session-message-actor-model.md  session-message-model-spec.md  session-message-rewrite-plan.md  session-message-schema-draft.md  soul-runtime-port-capability-matrix.md  soul-runtime-port-do-not-split-zones.md  soul-runtime-port-ledger.md  soul-runtime-port-reshaping-sequence-baseline.md  (+5 more)
docs/architecture/: overview.md
docs/dev-specs/: README.md  bash-tool-smoke.md  same-pass-multi-tool-call-smoke.md  tool-loop-session-memory-smoke.md
docs/operations/: documentation.md  testing.md
e2e/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
e2e/lib/: client.ts  env.ts  setup.ts  sse.ts
scripts/: package.sh  release.py  release_beta.py
(+91 files in other folders)
