[workspace]
members = [
  "crates/santi-core",
  "crates/santi-api",
  "crates/santi-cli",
  "crates/santi-db",
  "crates/santi-ebus",
  "crates/santi-lock",
  "crates/santi-provider",
  "crates/santi-runtime",
]

resolver = "2"

[profile.container-dev]
inherits = "dev"
debug = 0
codegen-units = 256
incremental = true
