[package]
name = "santi-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
async-stream = "0.3"
sha2 = "0.10"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "migrate"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
santi-core = { path = "../santi-core" }
santi-db = { path = "../santi-db" }
santi-ebus = { path = "../santi-ebus" }
santi-runtime = { path = "../santi-runtime" }
santi-lock = { path = "../santi-lock" }
async-trait = "0.1"
fs2 = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
