[package]
name = "santi-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
santi-core = { path = "../santi-core" }
santi-db = { path = "../santi-db" }
santi-lock = { path = "../santi-lock" }
santi-provider = { path = "../santi-provider" }
santi-runtime = { path = "../santi-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
