[package]
name = "santi-db"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
santi-core = { path = "../santi-core" }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "migrate"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5"] }
tokio = { version = "1", features = ["fs"] }
