[package]
name = "santi-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "script"] }
santi-core = { path = "../santi-core" }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
