[package]
name = "santi-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
santi-core = { path = "../santi-core" }
tracing = "0.1"
